Added video page. Finished Resume on homepage. FunFacts now included through JSON file

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<script src="directives/artGall.directive.js"></script>
 	<script src="directives/artDisp.directive.js"></script>
 	<script src="controllers/artController.js"></script>
-	<script src="controllers/contactController.js"></script>
+	<!-- <script src="controllers/contactController.js"></script> -->
 
 </script>
 </body>
