--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
 	<header ng-include="'views/navbar.html'"></header>
-	<div class="viewFade" ng-view></div>
+	<div ng-view></div>
 
 	<script src="app/app.js"></script>
 	<script src="directives/artGall.directive.js"></script>
