--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html ng-app="app">
 <head>
+	<!-- <meta charset="utf-8"> -->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Image Gallery</title>
 	<link href="styles/stylesheets/screen.css" rel="stylesheet"media="screen, projection" type="text/css" />
 	<link rel="stylesheet" href="app/lib/bootstrap-3.3.7-dist/css/bootstrap.css">
@@ -11,6 +13,9 @@
 	<script src="app/lib/zoom-master/jquery.zoom.js"></script>
   <script src="app/lib/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
 	<script src="app/lib/angular-messages.js"></script>
+
+	<!-- <base href="/"> -->
+
 </head>
 <body>
 
