--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
 	<header ng-include="'views/navbar.html'"></header>
-	<div ng-view></div>
+	<div ng-view autoscroll="true"></div>
 
 	<script src="app/app.js"></script>
 	<script src="directives/artGall.directive.js"></script>
