--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<!-- <meta charset="utf-8"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Image Gallery</title>
+	<title>Portfolio</title>
 	<link href="styles/stylesheets/screen.css" rel="stylesheet"media="screen, projection" type="text/css" />
 	<link rel="stylesheet" href="app/lib/bootstrap-3.3.7-dist/css/bootstrap.css">
 	<link rel="stylesheet" href="app/lib/font-awesome-4.7.0/css/font-awesome.min.css">
