Updated mobile filesizes, added email

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html ng-app="app">
 <head>
-	<!-- <meta charset="utf-8"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Portfolio</title>
 	<link href="styles/stylesheets/screen.css" rel="stylesheet"media="screen, projection" type="text/css" />
@@ -11,11 +10,8 @@
 	<script src="app/lib/angular-route.min.js"></script>
 	<script src="app/lib/jquery-3.2.1.min.js"></script>
 	<script src="app/lib/zoom-master/jquery.zoom.js"></script>
-  <script src="app/lib/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+  <!-- <script src="app/lib/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script> -->
 	<script src="app/lib/angular-messages.js"></script>
-
-	<!-- <base href="/"> -->
-
 </head>
 <body>
 
